<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DadosActivity">

    <EditText
        android:id="@+id/peso1"
        android:hint="@string/digite_seu_peso_kg"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/altura1"
        android:hint="@string/digite_sua_altura_metros"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/confirmar"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="confirmar"/>


</LinearLayout>